  - Galicia, Silesia, Andalucia, Canary Islands, Basque, Bavaria and Greenland can now join the EU via Internal Enlargement
  - New game rules for countries : Estonia, Romania, Poland
  - Minor changes in the military tree of Greece
  - Added a new Shanghai Cooperation Organization members list GUI
  - Expanded the list of SCO member countries

 Database:
  - Adjusted Ecuador's starting election cycle from 7 years to 4 years
  - Adjusted the European Debt Crisis timer has been adjusted to 900 days to better allow for time to pass the required laws
  - Adjusted the Naval Doctrines to include stealth corvettes and stealth frigates
  - Added FAO, BAY, BSH, CHU, CRM, DON, DPR, DRP, FAO, GGZ, HPR, HZG, KAE, KLM, KOM, KSH, LAG, LPR, LRP, MEL, MLR, MOV, NEE, OPR, PRP, RSK, RUS, SIL, SPA, TAT, TRA, VOJ, VRP, VTB, WLC to European country group trigger
  - Added ADJ, ADY, DAG, GOR, IKR, ING, KCC, KBK, KUB, SAZ, TLS to Middle Eastern country group trigger
  - Added ALT, ARK, BDA, BRY, CHS, CKK, CSB, ESB, FAR, HWI, KAM, KHM, KAS, KHA, KHS, KRP, LAD, MAN, MEG, RYU, SIB, SIK, TUV, URA, YAK, YAM to Asian country group trigger
  - Added ARC, ASK, FLA, IDH, KAN, LKT, NYK, UDT, USB to American country group trigger
  - Added ARC, ASK, CAL, CAS, CMB, CSA, FLA, GLC, IDH, LKT, NEN, NYK, TEX, UDT, USB to North American group trigger
  - Added RGD, SLA, TAM, TRC, YUC, ZAP, STL to Central American group trigger
  - Added FGU, PAT, SPL, SUL to South American group trigger
  - Added ADJ, ADY, CHE, DAG, GOR, ING, KBK, KCC, KUB to Caucasus group trigger
  - Added HWI to Oceania group trigger
  - Added ASK, CKK, GRL, KAE, KOM, NEE, QUE, SIB, YAK, YAM to Arctic group trigger
  - Added CNR to Spanish Speaking group trigger
  - Added all Russian Subject tags to Russian Proficient group trigger
  - Adjusted the Kosovar tax rates to 25% for population and 15% to corporate tax rate