@@ -1,3 +1,158 @@
+chinese_historic_plane_category = {
+	j10_decision = {
+		icon = GFX_decision_J10A
+
+		fire_only_once = yes
+		custom_cost_trigger = {
+			has_air_experience > 19
+		}
+		custom_cost_text = air_xp_20
+
+		visible = {
+			original_tag = CHI
+		}
+
+		available = {
+			has_tech = gen_4_light
+			has_tech = air_weapons_2
+			has_tech = avionics_1
+		}
+
+		complete_effect = {
+			log = "[GetDateText]: [Root.GetName]: Decision j10_decision"
+			air_experience = -20
+			create_equipment_variant = { #
+				name = "J-10 Menglong" #pre-production airframe
+				type = small_plane_strike_airframe_2
+				parent_version = 1
+				modules = {
+					fixed_main_weapon_slot = weap_mp_light_hardpoint_2
+					fixed_gun_slot = weap_multi_gun_3
+					fixed_auxiliary_weapon_slot_1 = weap_a2a_hardpoint_1
+					engine_type_slot = engine_light_single_2
+					avionics_type_slot = avionics_manned_2
+					wingform_type_slot = wing_delta_canard
+					special_slot_type_1 = spec_countermeasures_1
+					special_slot_type_2 = empty
+					special_slot_type_3 = empty
+				}
+				icon = "gfx/interface/technologies/CHI/AIR/MR2.dds"
+				model = "CHI_small_plane_airframe_2_entity"
+			}
+		}
+
+		ai_will_do = {
+			factor = 10
+		}
+	}
+
+	j10a_decision = {
+		icon = GFX_decision_J10A
+
+		fire_only_once = yes
+		custom_cost_trigger = {
+			has_air_experience > 19
+		}
+		custom_cost_text = air_xp_20
+
+		visible = {
+			original_tag = CHI
+		}
+
+		available = {
+			has_tech = gen_4_light
+			has_tech = air_weapons_2
+			has_tech = countermeasures_2
+			has_tech = avionics_2
+		}
+
+		complete_effect = {
+			log = "[GetDateText]: [Root.GetName]: Decision j10a_decision"
+			air_experience = -20
+			create_equipment_variant = { #
+				name = "Chengdu J-10A Menglong" #J-10A
+				type = small_plane_strike_airframe_2
+				parent_version = 2
+				modules = {
+					fixed_main_weapon_slot = weap_mp_light_hardpoint_2
+					fixed_gun_slot = weap_multi_gun_3
+					fixed_auxiliary_weapon_slot_1 = weap_a2a_hardpoint_1
+					engine_type_slot = engine_light_single_2
+					avionics_type_slot = avionics_manned_3
+					wingform_type_slot = wing_delta_canard
+					special_slot_type_1 = spec_countermeasures_2
+					special_slot_type_2 = empty
+					special_slot_type_3 = empty
+				}
+				upgrades = {
+					plane_bba_radar_upgrade = 1
+				}
+				mark_older_equipment_obsolete = yes
+				icon = "gfx/interface/technologies/CHI/AIR/MR2.dds"
+				model = "CHI_small_plane_airframe_2_entity"
+			}
+		}
+
+		ai_will_do = {
+			factor = 10
+		}
+	}
+
+	j10c_decision = {
+		icon = GFX_decision_J10C
+
+		fire_only_once = yes
+		custom_cost_trigger = {
+			has_air_experience > 19
+		}
+		custom_cost_text = air_xp_20
+
+		visible = {
+			original_tag = CHI
+		}
+
+		available = {
+			has_tech = gen_4_light
+			has_tech = air_weapons_2
+			has_tech = ag_weapons_2
+			has_tech = countermeasures_2
+			has_tech = engines_3
+			has_tech = avionics_2
+		}
+
+		complete_effect = {
+			log = "[GetDateText]: [Root.GetName]: Decision j10c_decision"
+			air_experience = -20
+			create_equipment_variant = { #
+				name = "Chengdu J-10C Menglong" #J-10C
+				type = small_plane_strike_airframe_2
+				parent_version = 3
+				modules = {
+					fixed_main_weapon_slot = weap_mp_med_hardpoint_2
+					fixed_gun_slot = weap_multi_gun_3
+					fixed_auxiliary_weapon_slot_1 = weap_a2a_hardpoint_2
+					engine_type_slot = engine_light_single_3
+					avionics_type_slot = avionics_manned_3
+					wingform_type_slot = wing_delta_canard
+					special_slot_type_1 = spec_countermeasures_2
+					special_slot_type_2 = spec_thrust_vector_2
+					special_slot_type_3 = empty
+				}
+				upgrades = {
+					plane_bba_radar_upgrade = 3
+				}
+				mark_older_equipment_obsolete = yes
+				icon = "gfx/interface/technologies/CHI/AIR/MR3.dds"
+				model = "CHI_small_plane_airframe_2_entity"
+			}
+		}
+
+		ai_will_do = {
+			factor = 10
+		}
+	}
+}
+
 sco_category = {
 
 	provide_development_assistance = {
