@@ -1,3 +1,13 @@
+chinese_historic_plane_category = {
+	icon = GFX_decision_jet_aircraft
+	allowed = {
+		has_dlc = "By Blood Alone"
+	}
+	visible = {
+		original_tag = CHI
+	}
+}
+
 sco_category = {
 
 	icon = GFX_decisions_category_sco
