@@ -2612,7 +2612,7 @@
 			}
 
 			# create_equipment_variant = { #
-			# 	name = "J-10 Vigorous Dragon" #pre-production airframe
+			# 	name = "J-10 Menglong" #pre-production airframe
 			# 	type = small_plane_strike_airframe_2
 			# 	parent_version = 1
 			# 	modules = {
@@ -2621,7 +2621,7 @@
 			# 		fixed_auxiliary_weapon_slot_1 = weap_a2a_hardpoint_1
 			# 		engine_type_slot = engine_light_double_2
 			# 		avionics_type_slot = avionics_manned_3
-			# 		wingform_type_slot = wing_swept
+			# 		wingform_type_slot = wing_delta_canard
 			# 		special_slot_type_1 = spec_countermeasures_1
 			# 	}
 			# 	icon = "gfx/interface/technologies/CHI/AIR/MR2.dds"
