@@ -5584,6 +5584,16 @@ spriteTypes = {
 	}
 
 	spriteType = {
+		name = "GFX_decision_J10A"
+		texturefile = "gfx/interface/decisions/military/J10A.dds"
+	}
+
+	spriteType = {
+		name = "GFX_decision_J10C"
+		texturefile = "gfx/interface/decisions/military/J10C.dds"
+	}
+
+	spriteType = {
 		name = "GFX_decision_koalitsiya_button"
 		texturefile = "gfx/interface/decisions/military/koalitsiya_button.png"
 	}
