@@ -1632,7 +1632,14 @@
  arunachal_war.30.b: "Prepare for full-scale war"
 
  # Chinese Decisions
- ###China
+ chinese_historic_plane_category: "Chinese Historical Jet Designs"
+ j10_decision: "Create Chengdu J-10 (Early Production) Design"
+ j10_decision_desc: "The initial batch of LRIP models delivered to the PLAAF is intended for flight testing and trial use. They are not equipped with high-performance radar, preventing them from engaging in beyond-visual-range combat with enemy aircraft."
+ j10a_decision: "Create Chengdu J-10A Design"
+ j10a_decision_desc: "The first officially commissioned model of the J-10 series aircraft in the PLA Air Force. It is equipped with the KLJ-3 Pulse-Doppler radar and a new avionics system, providing reliable medium-range interception capability."
+ j10c_decision: "Create Chengdu J-10C Design"
+ j10c_decision_desc: "A later upgraded version of the J-10A, equipped with an active electronically scanned array (AESA) radar and an improved data link system. In terms of power, it uses the domestically produced FWS-10 engine, granting it vector maneuverability."
+
  one_china_category: "Cross-Strait Relations"
  one_china_category_desc: "The Chinese Civil War ended with 2 alternative governments claiming to lead the entirety of the Chinese nation, the PRC based in Beijing and the ROC headquartered in Taipei. While in 1992 both governments set aside the issue, agreeing that there was only one China but disagreeing on who was the rightful ruler of it, pro-independence figures in Taiwan have criticized this consensus and called for the establishment of an independent nation of Taiwan.\n\nThe relative popularity of the pro-reunification §CPan-Blue Coalition§! and the pro-independence §GPan-Green Coalition§! in Taiwan serves as a rough approximation of opposition to and support for independence respectively.\n\n§CPan-Blue Coalition Support§!\n£TAI_conservatism  Kuomintang: §Y[?TAI.party_pop_array^1|%1]§!\n£TAI_Conservative  New Party: §Y[?TAI.party_pop_array^6|%1]§!\n£TAI_Neutral_conservatism  People First Party: §Y[?TAI.party_pop_array^14|%1]§!\n\nTotal Support: §Y[?TAI.pan_blue_coalition_support|%1]§!\n\n§GPan-Green Coalition Support§!\n£TAI_liberalism  Democratic Progressive Party: §Y[?TAI.party_pop_array^2|%1]§!\n£TAI_neutral_Social  Taiwan Independence Party: §Y[?TAI.party_pop_array^18|%1]§!\n\nTotal Support: §Y[?TAI.pan_green_coalition_support|%1]§!"
  resubmit_roadmap: "Resubmit the Roadmap to Reunification"
