@@ -32,6 +32,7 @@ v1.11.3
   - Minor changes in the military tree of Greece
   - Added a new Shanghai Cooperation Organization members list GUI
   - Expanded the list of SCO member countries
+  - Re-added the J-10 series historical design for China, unlocked by decisions now
 
  Database:
   - Adjusted Ecuador's starting election cycle from 7 years to 4 years
